# umierrorcorrect2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
benchmark/: README.md  analyze_results.py  benchmark_umi.sh  fastp.html  fastp.json  quick_benchmark.sh  umi_pipeline_parallel.sh
data/: Pik3ca-5plex_ensembl.bed  mutation_bed_template.bed
doc/: umi_pipeline_parallel.sh
docker/: Dockerfile
docs/: ANALYSIS_MODULE.md  DOCKER.md  IMPLEMENTATION.md  USER_GUIDE.md
docs/source/: conf.py  index.rst  modules.rst  umierrorcorrect.rst  umierrorcorrect.src.rst
scripts/: benchmark_hamming.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/test_data/: ref.fa  ref.fa.amb  ref.fa.ann  ref.fa.bwt  ref.fa.fai  ref.fa.pac  ref.fa.sa  test_regions.bed
tests/unit/: test_analysis_models.py  test_batch.py  test_check_args.py  test_consensus.py  test_get_consensus_statistics.py  test_get_regions_from_bed.py  test_post_processor.py  test_preprocess.py  test_umi_cluster.py
umierrorcorrect/: align.py  batch.py  call_variants.py  cli.py  downsampling.py  downsampling_plots.py  get_consensus_statistics.py  pipeline.py  preprocess.py  run_mapping.py  run_umierrorcorrect.py  umi_error_correct.py
umierrorcorrect/core/: check_args.py  consensus.py  constants.py  filter.py  fit_background_model.py  get_cons_info.py  get_consensus3.py  get_regions_from_bed.py  group.py  logging_config.py  umi_cluster.py  utils.py
umierrorcorrect/models/: models.py
umierrorcorrect/src/: check_args.py  constants.py  get_cons_info.py  get_consensus3.py  get_regions_from_bed.py  handle_sequences.py  logging_config.py  types.py  umi_cluster.py
umierrorcorrect2/: align.py  batch.py  call_variants.py  cli.py  downsampling.py  get_consensus_statistics.py  pipeline.py  preprocess.py  qc.py  umi_error_correct.py
umierrorcorrect2/analysis/: __init__.py  analyzer.py  models.py  mutation_tracker.py  post_processor.py  reporting.py
umierrorcorrect2/core/: check_args.py  consensus.py  constants.py  filter.py  fit_background_model.py  get_cons_info.py  group.py  logging_config.py  read_fastq_records.py  umi_cluster.py  utils.py
umierrorcorrect2/models/: models.py
